<resources>
    <string name="vs_common_default">Default</string>
    <string name="vs_common_auto_choose">Auto Choose</string>
    <string name="vs_region_default_desc">Choose the best region</string>
    <string name="vs_common_unknown">Unknown</string>
    <string name="vs_common_dialog_ok_button">Got it</string>
    <string name="vs_common_dialog_ok">OK</string>
    <string name="vs_common_tips_loading">Loading&#8230;</string>
    <string name="vs_common_tips_loading2">LOADING&#8230;</string>
    <string name="vs_common_tips_network_unavailable">Something went wrong, please check the network</string>
    <string name="vs_common_tips_no_email_app">You have no email app to send emails. Please set up an email app firstly</string>
    <string name="vs_common_button_got_it">Got it</string>
    <string name="vs_common_button_connect">CONNECT</string>
    <string name="vs_common_button_connected">CONNECTED</string>
    <string name="vs_common_button_disconnected">DISCONNECTED</string>
    <string name="vs_common_network_disconnected">Network unavailable</string>
    <string name="vs_common_check_network_settings">Open and check the network settings</string>
    <string name="vs_common_repair_network">Repair Network</string>
    <string name="region_code_unknown">Auto Choose</string>
    <string name="vs_core_service_state_testing">Connecting&#8230;</string>
    <string name="vs_core_service_state_disconnecting">Disconnecting&#8230;</string>
    <string name="vs_core_service_state_disconnecting2">Disconnecting, please try later</string>
    <string name="vs_core_service_state_disconnected">Disconnected</string>
    <string name="vs_core_service_state_disconnected_timeout">Connection timed out, please check the network and reconnect again(better change some other regions)</string>
    <string name="vs_core_service_state_disconnected_used_up3">Trial time has expired, please reconnect</string>
    <string name="vs_core_service_state_disconnected_error">Error[code=%s], please reconnect again(better reboot device to fix)</string>
    <string name="vs_core_service_state_connecting">Connecting&#8230;20%</string>
    <string name="vs_core_service_state_connecting2">Connecting, please try later</string>
    <string name="vs_core_service_state_connected">Connected</string>
    <string name="vs_core_service_operate_connect">Click to connect</string>
    <string name="vs_core_service_operate_disconnect">Click to disconnect</string>
    <string name="vs_core_service_state_connection_percentage_unit">%</string>
    <string name="vs_core_service_uptime_unit_hour">h</string>
    <string name="vs_core_service_uptime_unit_minute">m</string>
    <string name="vs_core_service_uptime_unit_second">s</string>
    <string name="vs_core_service_notification_traffic">%1$s↑\t%2$s↓</string>
    <string name="vs_core_service_notification_speed">%s/s</string>
    <string name="vs_core_service_notification_title_ready">IP Hider is Ready</string>
    <string name="notification_app_description">Security &amp; fast VPN</string>
    <string name="notification_network_title_1">Click to protect privacy</string>
    <string name="notification_network_title_2">Click to hide ip</string>
    <string name="notification_network_title_3">Click to unlock restrictions</string>
    <string name="notification_network_content_1">Protect you when using a public WiFi hotspot</string>
    <string name="notification_network_content_2">Enable you to anonymously and safely browse the internet</string>
    <string name="notification_network_content_3">Enable to bypass geo-restrictions to access any content anywhere</string>
    <string name="vs_core_service_always_vpn_tips">Please tap \'OK\'  (tick \'I trust this application\') or turn off \'Always-on VPN\' on VPN settings</string>
    <string name="vs_statement_privacy">Privacy will be\nprotected</string>
    <string name="vs_statement_ip">IP will\nbe changed</string>
    <string name="vs_statement_banned">Banned will be unlocked"</string>
    <string name="vs_will_disconnect_dialog_title">Will Disconnect?</string>
    <string name="vs_will_disconnect_dialog_cancel">Later</string>
    <string name="vs_will_disconnect_dialog_ok">Disconnect</string>
    <string name="vs_will_disconnect_dialog_desc_for_disconnect2">If you tap \'Disconnect\', you will lost the VPN connection.</string>
    <string name="vs_legal_notices_dialog_title">Legal Notices</string>
    <string name="vs_legal_notices_dialog_content">In accordance with the laws, policies and regulations of each country and region, the VPN service is not be provided in your region.</string>
    <string name="vs_privacy_confirm_content">INFORMATION WE COLLECT\n\na. Personal Information.\nWe do not collect Personal Information. “Personal Information” is information that identifies you or another person, such as your first name and last name, physical addresses, email addresses, telephone, fax, SSN, information stored within your device.\n\nb. Non-personal Information.\nWe collect your non-personal information when you visit our website, including your device information (device ID excluded), operation system, logs.\n\nc. Information You Provide.\nWe may collect your information when you communicate with us or you give us.\n\nHOW WE USE INFORMATION\n\na. Personal Information.\nWe do not store Personal Information and therefore we do not disclose your Personal Information.\n\nb. Non-Personal Information.\nWe do not sell, trade, or otherwise transfer to outside parties your information. We do not combine Non-Personal Information with Personal Information (such as combining your name with your unique User Device number).\n\nc. Legal Reasons\nWe will access, use or disclose your information with other organizations or entities for reasons that required by any applicable law, regulation, legal process or enforceable governmental request; detect, prevent, or otherwise fraud, security or technical issues; protect against harm to the rights, property or safety of us, our users or the public as required or permitted by law.\n\nSECURITY\n\nWe are very concerned about safeguarding the confidentiality of your information. We do not collect Personal Information, and we employ administrative, physical and electronic measures designed to protect your Non-Personal Information from unauthorized access and use. Please be aware that no security measures that we take to protect your information is absolutely guaranteed to avoid unauthorized access or use of your Non-Personal Information which is impenetrable.\n\nSensitive Information\n\nWe ask that you not send us, and you not disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership in past organizations, including trade union memberships) on or through an Application, the Services or the Site or otherwise to us.\n\nCONTACT US\n\nIf you have any questions or comments about this Policy or our privacy practices, or to report any violations of the Policy or abuse of the Services or the Site, please contact us at one.support@ironmeta.com.</string>
    <string name="vs_privacy_confirm_button">I Agree</string>
    <string name="vs_dialog_add_an_hour">Get 1 hour</string>
    <string name="vs_dialog_get_later">Get later</string>
    <string name="vs_rating_select_none_tips">Please tap a smiley face</string>
    <string name="vs_rating_feedback_send">I have some feedback</string>
    <string name="vs_rating_feedback_tip">Slide up to rate us and feedback</string>
    <string name="vs_rating_thanks_tips">Thanks for your rating</string>
    <string name="vs_add_time_an_hour_1">+1 Hour</string>
    <string name="vs_add_time_an_hour_wait_1">wait&#8230;(%s s)</string>
    <string name="congratulations">Congratulations!</string>
    <string name="exit_app">Exit The App?</string>
    <string name="connectivity_testing">Connectivity Testing...</string>
    <string name="connectivity_test_success">Success!</string>
    <string name="connectivity_test_fail">Test Failed</string>
    <string name="connectivity_test_fail_desc">Network is unstable, please test again or try later</string>
    <string name="increased_1_hour">Connection time has been increased by 1 hour</string>
    <string name="increased_x_minutes">Connection time has been increased by %d minutes</string>
    <string name="connectivity_test_desc">Test your network for latency</string>
    <string name="increased_2_hours">Connection time has been increased by 2 hours</string>
    <string name="hours">Hours</string>
    <string name="retest">RE-Test</string>
    <string name="test_now">TEST IT NOW</string>
    <string name="open_settings">Open Settings</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_time_fail">Network error, please try again</string>
    <string name="vs_add_time_two_hours_1">+2 Hours</string>
    <string name="vs_add_time_two_hours_preparing">PREPARING&#8230;</string>
    <string name="vs_add_time_two_hour_succeed">Congratulations! Connection time has been increased by 2 hours</string>
    <string name="vs_add_time_two_hour_fail">You have to finish watching the video to get the reward</string>
    <string name="vs_add_time_get_an_hour">Get 1 hour</string>
    <string name="vs_add_time_get_later">Get later</string>
    <string name="connectivity_test_duration">Https handshake took</string>
    <string name="time_unit_ms">ms</string>
    <string name="vs_feature_apps_bypass_title">Apps Bypass Settings</string>
    <string name="vs_feature_apps_bypass_title2">Apps Using VPN</string>
    <string name="vs_feature_app_bypass_tip">Note that it will take effect in the next connection</string>
    <string name="vs_feature_share_title">Share</string>
    <string name="vs_feature_share_statement">Share QR Code</string>
    <string name="vs_feature_share_item_name_whats_app">WhatsApp</string>
    <string name="vs_feature_share_item_name_sms">SMS</string>
    <string name="vs_feature_share_item_name_email">E-mail</string>
    <string name="vs_feature_share_item_name_copy_link">Copy Link</string>
    <string name="vs_feature_share_item_name_more">More</string>
    <string name="vs_feature_share_title_for_chooser">Complete action using</string>
    <string name="vs_feature_share_content_text">IP Hider is a fast, unlimited, stable and private VPN, install and use it now</string>
    <string name="vs_feature_share_content_link">https://play.google.com/store/apps/details?id=com.ironmeta.ip.hider</string>
    <string name="vs_feature_share_content_email_subject">A very safe and easy to use VPN - IP Hider</string>
    <string name="vs_feature_share_content_email_body">https://play.google.com/store/apps/details?id=com.ironmeta.ip.hider</string>
    <string name="vs_feature_share_item_tip_whats_app">Share it by WhatsApp unsuccessfully.</string>
    <string name="vs_feature_share_item_tip_sms">Share it by sms unsuccessfully.</string>
    <string name="vs_feature_share_item_tip_email">Share it by email unsuccessfully.</string>
    <string name="vs_feature_share_item_tip_copy_link">Copied</string>
    <string name="vs_feature_share_item_tip_more">Share by more unsuccessfully.</string>
    <string name="vs_feature_language_title">Language</string>
    <string name="vs_feature_privacy_policy_title">Privacy Policy</string>
    <string name="vs_feature_terms_of_service_title">Terms of Service</string>
    <string name="vs_feature_feedback_title">Feedback</string>
    <string name="vs_feature_region_selector_title">Region Selector</string>
    <string name="rate_title">Please rate us</string>
    <string name="rate_dont_show_again">Don\'t show again</string>
    <string name="rate_content">We\'ve worked hard to make this app free for you. Would you like to leave us a good review?</string>
</resources>