<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="282dp"
    android:layout_height="282dp"
    android:background="@mipmap/add_success_dialog_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/add_time_success"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textSize="14sp"
        android:text="@string/increased_1_hour"
        android:textColor="#C9C9C9"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/vs_common_button_got_it"
        android:background="@drawable/bg_btn_common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/vs_will_disconnect_dialog_cancel"
        android:background="@drawable/bg_btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
