<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_app"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/exit_app"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="start|top"
        android:paddingStart="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
        android:id="@+id/native_ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_margin="16dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_marginTop="13dp"
        android:text="@string/yes"
        android:background="@drawable/blue_radius_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintTop_toBottomOf="@id/native_ad_container"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/btn_no"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/no"
        android:background="@drawable/cancel_radius_4dp"
        app:layout_constraintStart_toEndOf="@id/btn_yes"
        app:layout_constraintBottom_toBottomOf="@id/btn_yes"
        app:layout_constraintTop_toTopOf="@id/btn_yes"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
