<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:lines="1"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@mipmap/bg_title_congra"
        android:gravity="start|top"
        android:paddingStart="16dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="58dp"
        android:background="@drawable/white_radius_bottom_4dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textSize="14sp"
            android:text="@string/increased_1_hour"
            android:textColor="#717171"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="18dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_got"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/vs_common_button_got_it"
            android:background="@drawable/blue_radius_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="11dp"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
