<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/testing_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:lines="1"
            android:text="@string/connectivity_testing"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@mipmap/bg_title_congra"
            android:gravity="start|top"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="58dp"
            android:background="@drawable/white_radius_bottom_4dp">
            <org.libpag.PAGView
                android:id="@+id/connectivity_testing_anim"
                android:layout_width="177dp"
                android:layout_height="126dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="18dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/connectivity_test_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/connectivity_test_desc"
                android:textColor="#2C2C2C"
                app:layout_constraintTop_toBottomOf="@id/connectivity_testing_anim"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_layout"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:lines="1"
            android:text="@string/connectivity_test_success"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/dialog_title"
            android:gravity="start|top"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="67dp"
            android:layout_height="68dp"
            app:srcCompat="@mipmap/success"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="58dp"
            android:background="@drawable/white_radius_bottom_4dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_success_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/increased_1_hour"
                android:textColor="#2C2C2C"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="18dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_success_got"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/vs_common_dialog_ok"
                android:background="@drawable/blue_radius_4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_success_retest"
                app:layout_constraintTop_toBottomOf="@id/tv_success_message"
                android:layout_marginStart="19dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="19dp"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_success_retest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp"
                android:text="@string/retest"
                android:textColor="#5BABFF"
                app:layout_constraintTop_toBottomOf="@id/btn_success_got"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="13dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fail_layout"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:lines="1"
            android:text="@string/connectivity_test_fail"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/dialog_title_black"
            android:gravity="start|top"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="67dp"
            android:layout_height="68dp"
            app:srcCompat="@mipmap/failed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="58dp"
            android:background="@drawable/white_radius_bottom_4dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fail_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/connectivity_test_fail_desc"
                android:textColor="#2C2C2C"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_fail_retest"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="18dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_fail_retest"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/retest"
                android:background="@drawable/black_radius_4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_fail_close"
                app:layout_constraintTop_toBottomOf="@id/tv_fail_message"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="19dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fail_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="14sp"
                android:text="@string/close"
                android:textColor="#80303643"
                app:layout_constraintTop_toBottomOf="@id/btn_fail_retest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="13dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
